--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   
   # 로컬 저장
   shared_preferences: ^2.2.2
+  
+  # 환경 변수 관리
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -81,9 +84,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
