--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_animate: ^4.2.0
   audioplayers: ^5.2.1
+  flutter_tts: ^3.8.3
   
   # 상태 관리
   provider: ^6.1.1
