MVP 구현: 음성 대화 및 Upgrade Replay 시스템
- 음성 대화 핵심 서비스 구현 (voice_conversation_service.dart)
  - OpenAI GPT-4 + TTS HD 연동
  - 실시간 음성 인식 및 응답
  - 랜덤 시나리오 생성

- Upgrade Replay 기능 구현 (upgrade_replay_service.dart)
  - 사용자 발화 개선 알고리즘
  - 네이티브 점수 평가 시스템
  - 개선된 대화 재생 기능

- 구독 시스템 구현 (subscription_service.dart)
  - 무료: 일 10회 Replay
  - Pro: 일 30회 Replay (월 9,900원)
  - 사용량 추적 및 관리

- UI/UX 구현
  - 메인 대화 화면 (voice_conversation_screen.dart)
  - Upgrade Replay 화면 (upgrade_replay_screen.dart)
  - 실시간 음성 시각화
  - 프리미엄 업그레이드 플로우

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,12 @@ dependencies:
   
   # 환경 변수 관리
   flutter_dotenv: ^5.1.0
+  
+  # 인앱 구매
+  in_app_purchase: ^3.1.11
+  
+  # 날짜/시간 관리
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
