--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,9 +65,16 @@ dependencies:
   
   # 인앱 구매
   in_app_purchase: ^3.1.11
+  purchases_flutter: ^8.1.2
   
   # 날짜/시간 관리
   intl: ^0.18.1
+  
+  # 오디오
+  just_audio: ^0.9.36
+  
+  # UI
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +101,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
