Complete iOS microphone permission fix
- Enhanced Info.plist with detailed English permission descriptions
- Added Podfile configuration for microphone permission
- Improved permission request flow with dialog for denied state
- Better app lifecycle handling when returning from Settings
- Added permission check delay after settings return
- Reinstalled iOS dependencies with clean build

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,5 +40,20 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    # Permission settings for microphone
+    target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        ## Enable microphone permission
+        'PERMISSION_MICROPHONE=1',
+        ## Disable unnecessary permissions
+        'PERMISSION_CAMERA=0',
+        'PERMISSION_PHOTOS=0',
+        'PERMISSION_CONTACTS=0',
+        'PERMISSION_LOCATION=0',
+        'PERMISSION_NOTIFICATIONS=0'
+      ]
+    end
   end
 end
