--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,9 +46,9 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>영어 회화 연습을 위해 마이크 접근이 필요합니다</string>
+	<string>EnglishEar needs microphone access for real-time English conversation practice. This app uses your voice to help improve your English speaking skills.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>발음 분석을 위해 음성 인식 권한이 필요합니다</string>
+	<string>EnglishEar uses speech recognition to analyze your pronunciation and provide feedback for better English speaking.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
