Replace WAV conversion with PCM direct streaming using flutter_sound
- Removed just_audio and replaced with flutter_sound for PCM streaming
- Eliminated WAV conversion overhead - direct PCM playback
- OpenAI Realtime API sends PCM16 24kHz which is played directly
- Better audio quality with natural voice (laughs, intonation preserved)
- Lower latency with direct streaming
- Removed unused audio_utils.dart file
- Updated iOS minimum version to 13.0 for dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,8 @@ dependencies:
   intl: ^0.18.1
   
   # 오디오
-  just_audio: ^0.9.36
+  flutter_sound: ^9.2.13  # PCM streaming support
+  # just_audio: ^0.9.36  # Removed - using flutter_sound for PCM streaming
   
   # UI
   lottie: ^3.1.0
