--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   # UI/UX
   animated_text_kit: ^4.2.2
   flutter_animate: ^4.2.0
-  # audioplayers: ^5.2.1  # iOS에서 setSourceBytes 미지원으로 제거
+  audioplayers: ^6.1.0  # 최신 버전 (iOS 지원 개선)
   flutter_tts: ^3.8.3
   
   # 상태 관리
